--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,12 +2,12 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: daily-weather-plugin
-  description: An example of a Backstage application.
+  description: An example of a Backstage plugin.
   # Example for optional annotations
   # annotations:
   #   github.com/project-slug: backstage/backstage
   #   backstage.io/techdocs-ref: dir:.
 spec:
-  type: website
-  owner: john@example.com
+  type: service
+  owner: AdityaK60
   lifecycle: experimental
